--- a/AndroidDebugBridge.csproj
+++ b/AndroidDebugBridge.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <Platforms>x64;x86;ARM64</Platforms>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0-windows</TargetFramework>
+		<Nullable>enable</Nullable>
+		<Platforms>x64;x86;arm64</Platforms>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="WinUSBNet" Version="2.1.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="WinUSBNet" Version="2.1.0" />
+	</ItemGroup>
 
 </Project>
